# pocketllama

./: .gitignore  Cargo.toml  README.md
DOCUMENTS/: blueprint.md  pocketllamaPDR.md  pocketllamaSDD.md  pocketllamaSRS.md
pocket-cli/: Cargo.toml
pocket-cli/src/: main.rs
pocket-core/: Cargo.toml
pocket-core/src/: lib.rs
pocket-engine/: Cargo.toml
pocket-engine/src/: lib.rs
pocket-server/: Cargo.toml
pocket-server/src/: lib.rs
pocket-ui/: Cargo.toml
pocket-ui/assets/: index.html
