[package]
name = "pocket-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pocketllama"
path = "src/main.rs"

[dependencies]
pocket-core = { path = "../pocket-core" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
rustyline = "12.0"
pocket-engine = { path = "../pocket-engine" }
pocket-server = { path = "../pocket-server" }
webbrowser = "1.0"
anyhow = "1.0"
