[package]
name = "pocket-server"
version = "0.1.0"
edition = "2024"

[dependencies]
pocket-core = { path = "../pocket-core" }
pocket-engine = { path = "../pocket-engine" }
pocket-ui = { path = "../pocket-ui" }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
